# Cache_Task_cpp

./: CMakeLists.txt  README.md
belady/: CMakeLists.txt  belady_cache.hpp  main.cpp
belady/inc/: belady_cache.hpp
lfu/: CMakeLists.txt  lfu_cache.hpp  main.cpp
lfu/inc/: lfu_cache.hpp
tests/: CMakeLists.txt  test.cpp
tests/EndToEnd/: e2e_tests.out  testrun.py
tests/EndToEnd/input_files/: test_01.in  test_02.in  test_03.in  test_04.in  test_05.in  test_06.in  test_07.in  test_08.in  test_09.in  test_10.in
